# env-config

./: .copier-answers-py.yaml  .gitignore  env-config.yaml  hatch.toml  mise.toml  noxfile.py  pyproject.toml  readme.md
.circleci/: config.yml
mise/: config.toml
requirements/: base.in  base.txt  dev.txt
shells/: init.bash
src/env_config/: aws.py  cli.py  config.py  core.py  utils.py  version.py
src/env_config/tests/: test_aws.py  test_cli.py  test_config.py  test_core.py  test_shells.py  test_utils.py
src/env_config/tests/configs/: aws-config  aws.yaml
