[build-system]
requires = [
    'hatchling',
    'hatch-requirements-txt',
    'hatch-regex-commit',
]
build-backend = 'hatchling.build'


[project]
name = 'env-config-cli'
authors = [{name = 'Randy Syring', email = 'randy.syring@level12.io'}]
dynamic = ['dependencies', 'optional-dependencies', 'version']
readme = 'readme.md'


[project.scripts]
env-config = 'env_config.cli:main'
env-config-shell = 'env_config.cli:env_config_shell'

[tool.hatch.metadata.hooks.requirements_txt]
files = ['requirements/base.txt']

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
dev = ['requirements/dev.txt']

[tool.reqs]
sync_pipx = true
